--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .idea/
-venv/
+env/
 db.sqlite3
 DRFforTEST/__pycache__/
 blog/__pycache__/
@@ -7,3 +7,6 @@ blog/migrations/__pycache__/
 blog/.DS_Store
 .DS_Store
 _last_answer.md
+.env
+postgres-data/
+.gitignore.swp
