--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asgiref==3.7.2
+asgiref==3.7.2
 certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
@@ -22,6 +23,7 @@ openapi-codec==1.3.2
 pycparser==2.21
 PyJWT==2.8.0
 python3-openid==3.2.0
+python-dotenv
 pytz==2023.3.post1
 requests==2.31.0
 requests-oauthlib==1.3.1
@@ -33,3 +35,9 @@ sqlparse==0.4.4
 typing_extensions==4.8.0
 uritemplate==4.1.1
 urllib3==2.0.4
+
+pip~=23.2.1
+PyYAML~=6.0.1
+psycopg~=3.1.10
+packaging~=23.1
+inflection~=0.5.1
